--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -20,3 +20,36 @@
 .nav li a:hover {
     text-decoration: underline;
 }
+
+.dropdown details {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown summary {
+    cursor: pointer;
+    list-style: none;
+  }
+  
+  .dropdown ul {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background: white;
+    border: 1px solid #ccc;
+    padding: 0.5rem;
+    z-index: 100;
+    list-style: none;
+  }
+  
+  .dropdown ul li {
+    margin: 0;
+  }
+  
+  .dropdown ul a {
+    text-decoration: none;
+    color: black;
+    display: block;
+    padding: 0.25rem 0;
+  }
+  
