--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -1,55 +1,57 @@
 .site-header {
-    background-color: #fff;
-    padding: 16px;
+  background-color: #fff;
+  padding: 16px;
 }
 
 .nav ul {
-    list-style: none;
-    display: flex;
-    gap: 20px;
-    margin: 0;
-    padding: 0;
+  list-style: none;
+  display: flex;
+  gap: 20px;
+  margin: 0;
+  padding: 0;
 }
 
 .nav li a {
-    color: #000;
-    text-decoration: none;
-    font-weight: bold;
+  color: #000;
+  text-decoration: none;
+  font-weight: bold;
 }
 
 .nav li a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
+}
+.nav button {
+  display: inline-block;
+  color: #000;
+}
+.dropdown details {
+  position: relative;
+  display: inline-block;
 }
 
-.dropdown details {
-    position: relative;
-    display: inline-block;
-  }
-  
-  .dropdown summary {
-    cursor: pointer;
-    list-style: none;
-  }
-  
-  .dropdown ul {
-    position: absolute;
-    top: 100%;
-    left: 0;
-    background: white;
-    border: 1px solid #ccc;
-    padding: 0.5rem;
-    z-index: 100;
-    list-style: none;
-  }
-  
-  .dropdown ul li {
-    margin: 0;
-  }
-  
-  .dropdown ul a {
-    text-decoration: none;
-    color: black;
-    display: block;
-    padding: 0.25rem 0;
-  }
-  
+.dropdown summary {
+  cursor: pointer;
+  list-style: none;
+}
+
+.dropdown ul {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background: white;
+  border: 1px solid #ccc;
+  padding: 0.5rem;
+  z-index: 100;
+  list-style: none;
+}
+
+.dropdown ul li {
+  margin: 0;
+}
+
+.dropdown ul a {
+  text-decoration: none;
+  color: black;
+  display: block;
+  padding: 0.25rem 0;
+}
