--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,101 +1,89 @@
 #root {
-  max-width: 1280px;
+  /* max-width:1280px; */
   margin: 0 auto;
   padding: 2rem;
   position: relative;
+  width: 100%;
 }
 
-/* 기본 브라우저 스타일 제거 */
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  box-sizing: border-box
 }
 
-/* body 초기화 */
 body {
-  font-family: 'Pretendard', 'Noto Sans KR', sans-serif;
+  font-family: Pretendard,Noto Sans KR,sans-serif;
   background-color: #fff;
   color: #222;
   line-height: 1.5;
-  -webkit-font-smoothing: antialiased;
+  -webkit-font-smoothing: antialiased
 }
 
-/* 링크 초기화 */
 a {
   color: inherit;
-  text-decoration: none;
+  text-decoration: none
 }
 
-/* 리스트 초기화 */
-ul,
-ol {
+ul,ol {
   list-style: none;
   padding-left: 0;
-  margin: 0;
+  margin: 0
 }
 
-/* 이미지 초기화 */
 img {
   max-width: 100%;
   display: block;
-  object-fit: cover;
+  object-fit: cover
 }
 
-/* 버튼 초기화 */
 button {
   border: none;
   background: none;
   font: inherit;
-  cursor: pointer;
+  cursor: pointer
 }
 
-/* 제목 초기화 */
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: normal;
+h1,h2,h3,h4,h5,h6 {
+  font-weight: 400
 }
-
 
 .logo {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
-  transition: filter 300ms;
+  transition: filter .3s
 }
 
 .logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+  filter: drop-shadow(0 0 2em #646cffaa)
 }
 
 .logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+  filter: drop-shadow(0 0 2em #61dafbaa)
 }
 
 @keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+  0% {
+      transform: rotate(0)
   }
 
   to {
-    transform: rotate(360deg);
+      transform: rotate(360deg)
   }
 }
 
 @media (prefers-reduced-motion: no-preference) {
   a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+      animation: logo-spin infinite 20s linear
   }
 }
 
 .card {
-  padding: 2em;
+  padding: 2em
 }
 
 .read-the-docs {
-  color: #888;
+  color: #888
 }
+
