--- a/client/src/components/fullpage.css
+++ b/client/src/components/fullpage.css
@@ -1,8 +1,44 @@
 .section {
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 2rem;
-  }
-  
+	height: 100vh;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-size: 2rem;
+}
+.panel {
+	position: relative;
+	background-color: #1a1a1a;
+}
+.panel:nth-of-type(even) {
+	background-color: #111111;
+}
+
+.svg-path {
+	width: 100%;
+	height: 100vh;
+	position: absolute;
+	top: 0;
+}
+.svg-path svg {
+	width: 100%;
+	height: 100%;
+}
+.svg-path svg path {
+	stroke: #00c0ff;
+	fill: none;
+	stroke-width: 2px;
+	stroke-miterlimit: 10;
+	stroke-linecap: round;
+	stroke-linejoin: round;
+}
+
+h1 {
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	font-family: sans-serif;
+	text-transform: uppercase;
+	color: #00c0ff;
+	margin: 0;
+}
