--- a/client/src/components/fullpage.css
+++ b/client/src/components/fullpage.css
@@ -1,24 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Lato:700');
-
-.section {
-	height: 100vh;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	font-size: 2rem;
-}
-
-* {
-	box-sizing: border-box;
-}
-
-body {
-	font-family: 'Lato', sans-serif;
-	background: #111;
-	min-height: 100vh;
-	overflow-x: hidden;
-}
-
 .page {
 	height: 100vh;
 	width: 100vw;
@@ -62,66 +41,87 @@ body {
 
 .char {
 	display: inline-block;
-	animation-delay: calc(0.25s + var(--char-index) * 0.1s);
-	transition: all 0.25s calc(0.25s + var(--char-index) * 0.1s);
+	opacity: 0;
+	transform: translateY(30px);
+	transition: all 0.4s ease-out;
+	transition-delay: calc(var(--char-index) * 0.05s);
+}
+
+[data-scroll='in'] .char {
+	opacity: 1;
+	transform: translateY(0);
 }
 
 /* Minimal versions of splitting effects */
-.text--enter .char {
-	opacity: 0;
-	transform: translateY(-150%);
+.text--enter[data-scroll='in'] .char {
 	animation: enterAnim 0.6s ease-out forwards;
 	animation-delay: calc(var(--char-index) * 0.05s);
 }
 @keyframes enterAnim {
-	to {
+	0% {
+		opacity: 0;
+		transform: translateY(-150%);
+	}
+	100% {
 		opacity: 1;
 		transform: translateY(0);
 	}
 }
 
-.text--random .char {
-	opacity: 0;
-	transform: translateY(100%);
+.text--random[data-scroll='in'] .char {
 	animation: randomFade 0.6s ease-out forwards;
 	animation-delay: calc(var(--char-index) * 0.05s);
 }
 @keyframes randomFade {
-	to {
+	0% {
+		transform: translateY(100%);
+		opacity: 0;
+	}
+	100% {
 		transform: translateY(0);
 		opacity: 1;
 	}
 }
 
-.text--swapsies .char:nth-of-type(odd) {
-	transform: translateX(100%);
+.text--swapsies[data-scroll='in'] .char:nth-of-type(odd) {
 	animation: swapLeft 0.6s ease-out forwards;
 	animation-delay: calc(var(--char-index) * 0.04s);
 }
-.text--swapsies .char:nth-of-type(even) {
-	transform: translateX(-100%);
+.text--swapsies[data-scroll='in'] .char:nth-of-type(even) {
 	animation: swapRight 0.6s ease-out forwards;
 	animation-delay: calc(var(--char-index) * 0.04s);
 }
 @keyframes swapLeft {
-	to {
+	0% {
+		transform: translateX(100%);
+		opacity: 0;
+	}
+	100% {
 		transform: translateX(0);
+		opacity: 1;
 	}
 }
 @keyframes swapRight {
-	to {
+	0% {
+		transform: translateX(-100%);
+		opacity: 0;
+	}
+	100% {
 		transform: translateX(0);
+		opacity: 1;
 	}
 }
 
-.text--flipping .char {
-	transform: rotateY(180deg);
-	opacity: 0;
+.text--flipping[data-scroll='in'] .char {
 	animation: flipIn 0.6s ease-out forwards;
 	animation-delay: calc(var(--char-index) * 0.06s);
 }
 @keyframes flipIn {
-	to {
+	0% {
+		transform: rotateY(180deg);
+		opacity: 0;
+	}
+	100% {
 		transform: rotateY(0);
 		opacity: 1;
 	}
