--- a/client/src/components/fullpage.css
+++ b/client/src/components/fullpage.css
@@ -1,3 +1,16 @@
+@import url('https://fonts.googleapis.com/css?family=Lato:700');
+
+* {
+	box-sizing: border-box;
+}
+
+body {
+	font-family: 'Lato', sans-serif;
+	background: #fff;
+	min-height: 100vh;
+	overflow-x: hidden;
+}
+
 .page {
 	height: 100vh;
 	width: 100vw;
@@ -8,6 +21,8 @@
 	align-items: center;
 	justify-content: center;
 	position: relative;
+	background: #fff;
+	color: #333;
 }
 
 .container {
@@ -18,7 +33,6 @@
 }
 
 .page {
-	color: #333;
 	font-size: 3rem;
 	text-align: center;
 }
@@ -29,22 +43,13 @@
 	}
 }
 
-.page:nth-child(n) {
-	background: #7e05d7;
-}
-.page:nth-child(2n) {
-	background: #f21e56;
-}
-.page:nth-child(3n) {
-	background: #bd04a9;
-}
-
 .char {
 	display: inline-block;
 	opacity: 0;
 	transform: translateY(30px);
 	transition: all 0.4s ease-out;
 	transition-delay: calc(var(--char-index) * 0.05s);
+	color: #333;
 }
 
 [data-scroll='in'] .char {
