--- a/client/src/components/fullpage.css
+++ b/client/src/components/fullpage.css
@@ -52,11 +52,12 @@ body {
 	color: #333;
 }
 
-[data-scroll='in'] .char {
+.word[data-scroll='in'] .char {
 	opacity: 1;
 	transform: translateY(0);
 }
 
+/* Minimal versions of splitting effects */
 .text--enter[data-scroll='in'] .char {
 	animation: enterAnim 0.6s ease-out forwards;
 	animation-delay: calc(var(--char-index) * 0.05s);
@@ -78,11 +79,11 @@ body {
 }
 @keyframes randomFade {
 	0% {
-		transform: translateX(-100%) translateY(-50%) rotate(-45deg);
+		transform: translateY(100%);
 		opacity: 0;
 	}
 	100% {
-		transform: translateX(0) translateY(0) rotate(0);
+		transform: translateY(0);
 		opacity: 1;
 	}
 }
@@ -97,21 +98,21 @@ body {
 }
 @keyframes swapLeft {
 	0% {
-		transform: translateX(100%) translateY(100%);
+		transform: translateX(100%);
 		opacity: 0;
 	}
 	100% {
-		transform: translateX(0) translateY(0);
+		transform: translateX(0);
 		opacity: 1;
 	}
 }
 @keyframes swapRight {
 	0% {
-		transform: translateX(-100%) translateY(-100%);
+		transform: translateX(-100%);
 		opacity: 0;
 	}
 	100% {
-		transform: translateX(0) translateY(0);
+		transform: translateX(0);
 		opacity: 1;
 	}
 }
@@ -131,15 +132,12 @@ body {
 	}
 }
 
-.text--fading[data-scroll='in'] .char {
-	animation: fadeIn 0.5s ease-out forwards;
-	animation-delay: calc(var(--char-index) * 0.05s);
+[data-scroll-section]:not(.is-inview) {
+	opacity: 0;
+	pointer-events: none;
 }
-@keyframes fadeIn {
-	from {
-		opacity: 0;
-	}
-	to {
-		opacity: 1;
-	}
+
+[data-scroll-section].is-inview {
+	opacity: 1;
+	pointer-events: auto;
 }
