--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -1,69 +1,68 @@
 .site-header {
-    background-color: #fff;
-    padding: 16px;
-    width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
+	background-color: #fff;
+	padding: 16px;
+	width: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
 }
 
 .nav {
-    margin: 0 60px
+	margin: 0 60px;
 }
 
 .nav ul {
-    list-style: none;
-    display: flex;
-    gap: 20px;
-    margin: 0;
-    padding: 0;
-    justify-content: flex-end;
+	list-style: none;
+	display: flex;
+	gap: 20px;
+	margin: 0;
+	padding: 0;
+	justify-content: flex-end;
 }
 
 .nav li a {
-    color: #000;
-    text-decoration: none;
-    font-weight: 700
+	color: #000;
+	text-decoration: none;
+	font-weight: 700;
 }
 
 .nav li a:hover {
-    text-decoration: underline
+	text-decoration: underline;
 }
 
 .nav button {
-    display: inline-block;
-    color: #000
+	display: inline-block;
+	color: #000;
 }
 
 .dropdown details {
-    position: relative;
-    display: inline-block
+	position: relative;
+	display: inline-block;
 }
 
 .dropdown summary {
-    cursor: pointer;
-    list-style: none
+	cursor: pointer;
+	list-style: none;
 }
 
 .dropdown ul {
-    position: absolute;
-    top: 100%;
-    left: 0;
-    background: #fff;
-    border: 1px solid #ccc;
-    padding: .5rem;
-    z-index: 100;
-    list-style: none
+	position: absolute;
+	top: 100%;
+	left: 0;
+	background: #fff;
+	border: 1px solid #ccc;
+	padding: 0.5rem;
+	z-index: 100;
+	list-style: none;
 }
 
 .dropdown ul li {
-    margin: 0
+	margin: 0;
 }
 
 .dropdown ul a {
-    text-decoration: none;
-    color: #000;
-    display: block;
-    padding: .25rem 0
+	text-decoration: none;
+	color: #000;
+	display: block;
+	padding: 0.25rem 0;
 }
-
