페이지 앵커 추가

--- a/client/src/components/fullpage-style-full.scss
+++ b/client/src/components/fullpage-style-full.scss
@@ -6,7 +6,7 @@
 
 body {
 	font-family: 'Lato', sans-serif;
-	background: #111;
+	background: #fff;
 	min-height: 100vh;
 	overflow-x: hidden;
 }
@@ -28,7 +28,7 @@ body {
 	align-items: center;
 	justify-content: center;
 	position: relative;
-	color: #fff;
+	color: #333;
 	font-size: 3rem;
 	text-align: center;
 }
