--- a/client/src/components/fullpage-style-full.scss
+++ b/client/src/components/fullpage-style-full.scss
@@ -4,20 +4,21 @@
 	box-sizing: border-box;
 }
 
-body {
-	font-family: 'Lato', sans-serif;
-	background: #fff;
-	min-height: 100vh;
-	overflow-x: hidden;
+html,
+body,
+#root {
+	height: 100%;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
 }
 
-.container {
-	height: 100vh;
-	overflow: auto;
-	overflow-x: hidden;
+.fullpage-wrapper {
+	height: 100%;
+	overflow-y: scroll;
 	scroll-snap-type: y mandatory;
+	scroll-behavior: smooth;
 }
-
 .page {
 	height: 100vh;
 	width: 100vw;
