--- a/client/src/components/fullpage.css
+++ b/client/src/components/fullpage.css
@@ -3,3 +3,44 @@
 * {
 	box-sizing: border-box;
 }
+html,
+body,
+#root {
+	height: 100%;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+	box-sizing: border-box;
+}
+
+.fullpage-wrapper {
+	height: 100vh;
+	overflow-y: scroll;
+	scroll-snap-type: y mandatory;
+	scroll-behavior: smooth;
+	-webkit-overflow-scrolling: touch;
+	scrollbar-width: none;
+	-ms-overflow-style: none;
+}
+
+.fullpage-wrapper::-webkit-scrollbar {
+	display: none;
+}
+
+.page {
+	height: 100vh;
+	width: 100vw;
+	scroll-snap-align: start;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	overflow: hidden;
+}
+
+.text,
+.char {
+	color: #fff;
+	text-align: center;
+	word-break: keep-all;
+	box-sizing: border-box;
+}
