--- a/client/src/components/fullpage.css
+++ b/client/src/components/fullpage.css
@@ -10,6 +10,7 @@ body,
 	overflow: hidden;
 	box-sizing: border-box;
 	position: relative;
+	font-family: 'Lato', sans-serif;
 }
 
 .fullpage-wrapper {
