--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,88 +1,92 @@
 #root {
-  margin: 0 auto;
-  padding: 2rem;
-  position: relative;
-  width: 100%;
+	margin: 0 auto;
+	padding: 2rem;
+	width: 100%;
 }
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
 body {
-  font-family: Pretendard,Noto Sans KR,sans-serif;
-  background-color: #fff;
-  color: #222;
-  line-height: 1.5;
-  -webkit-font-smoothing: antialiased
+	font-family: Pretendard, Noto Sans KR, sans-serif;
+	background-color: #fff;
+	color: #222;
+	line-height: 1.5;
+	-webkit-font-smoothing: antialiased;
 }
 
 a {
-  color: inherit;
-  text-decoration: none
+	color: inherit;
+	text-decoration: none;
 }
 
-ul,ol {
-  list-style: none;
-  padding-left: 0;
-  margin: 0
+ul,
+ol {
+	list-style: none;
+	padding-left: 0;
+	margin: 0;
 }
 
 img {
-  max-width: 100%;
-  display: block;
-  object-fit: cover
+	max-width: 100%;
+	display: block;
+	object-fit: cover;
 }
 
 button {
-  border: none;
-  background: none;
-  font: inherit;
-  cursor: pointer
+	border: none;
+	background: none;
+	font: inherit;
+	cursor: pointer;
 }
 
-h1,h2,h3,h4,h5,h6 {
-  font-weight: 400
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	font-weight: 400;
 }
 
 .logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter .3s
+	height: 6em;
+	padding: 1.5em;
+	will-change: filter;
+	transition: filter 0.3s;
 }
 
 .logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa)
+	filter: drop-shadow(0 0 2em #646cffaa);
 }
 
 .logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa)
+	filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
 @keyframes logo-spin {
-  0% {
-      transform: rotate(0)
-  }
+	0% {
+		transform: rotate(0);
+	}
 
-  to {
-      transform: rotate(360deg)
-  }
+	to {
+		transform: rotate(360deg);
+	}
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-      animation: logo-spin infinite 20s linear
-  }
+	a:nth-of-type(2) .logo {
+		animation: logo-spin infinite 20s linear;
+	}
 }
 
 .card {
-  padding: 2em
+	padding: 2em;
 }
 
 .read-the-docs {
-  color: #888
+	color: #888;
 }
-
