--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,8 @@
 #root {
-	margin: 0 auto;
-	padding: 2rem;
+	margin: 0;
+	padding: 0;
 	width: 100%;
+	height: 100%;
 }
 
 * {
@@ -11,7 +12,6 @@
 }
 
 body {
-	font-family: Pretendard, Noto Sans KR, sans-serif;
 	background-color: #fff;
 	color: #222;
 	line-height: 1.5;
