--- a/client/src/components/fullpage-style-full.scss
+++ b/client/src/components/fullpage-style-full.scss
@@ -6,6 +6,7 @@
 
 [data-scroll-container] {
 	height: 100vh;
+	scroll-snap-type: y mandatory;
 }
 
 .page:nth-child(n) {
@@ -23,151 +24,3 @@
 	animation-delay: calc(0.25s + var(--char-index) * 0.1s);
 	transition: all 0.25s calc(0.25s + var(--char-index) * 0.1s);
 }
-
-/* Full effects block from original Stylus content */
-/* Start of effects block */
-.text {
-	&--enter {
-		[data-scroll='out'] .char {
-			opacity: 0;
-			transform: translate(0, -150%);
-		}
-		.char {
-			opacity: 1;
-			transform: translate(0, 0);
-		}
-	}
-
-	&--fading {
-		[data-scroll='out'] .char {
-			opacity: 0;
-		}
-	}
-
-	&--flipping {
-		[data-scroll='out'] .char {
-			transform: rotateY(180deg);
-		}
-	}
-
-	&--slide {
-		.char {
-			transition-delay: calc((var(--char-total) - var(--char-index)) * 0.1s);
-		}
-		[data-scroll='out'] .char {
-			opacity: 0;
-			transform: translate(-300%, 0) skewX(20deg);
-		}
-	}
-
-	&--scaling {
-		[data-scroll='out'] .char {
-			transform: scale(0);
-		}
-	}
-
-	&--turning {
-		[data-scroll='out'] .char {
-			transform: rotateY(90deg);
-		}
-	}
-
-	&--folding {
-		[data-scroll='out'] .char {
-			transform: rotateX(90deg);
-			transform-origin: bottom;
-		}
-	}
-
-	&--bulge {
-		[data-scroll='in'] .char {
-			animation-name: bulge;
-			animation-duration: 0.25s;
-		}
-		@keyframes bulge {
-			50% {
-				transform: scale(1.5);
-			}
-		}
-	}
-
-	&--perspective {
-		perspective: 1000px;
-		.char {
-			transition: transform 0.25s calc(0.25s + var(--char-index) * 0.1s), opacity 0.05s calc(0.25s + var(--char-index) * 0.1s);
-		}
-		[data-scroll='out'] .char {
-			opacity: 0;
-			transform: translate3d(-25px, -20px, -800px);
-		}
-	}
-
-	&--zipping {
-		.char {
-			transition: transform 0.25s calc(0.25s + var(--char-index) * 0.1s), opacity 0.05s calc(0.25s + var(--char-index) * 0.1s);
-		}
-		[data-scroll='out'] .char {
-			opacity: 0;
-		}
-		[data-scroll='out'] .char:nth-of-type(odd) {
-			transform: translate(0, -100%);
-		}
-		[data-scroll='out'] .char:nth-of-type(even) {
-			transform: translate(0, 100%);
-		}
-	}
-
-	&--spinning {
-		[data-scroll='out'] .char {
-			transform: rotateY(-360deg);
-		}
-	}
-
-	&--tumbling {
-		.char {
-			transition-delay: calc((var(--char-total) - var(--char-index)) * 0.1s);
-		}
-		[data-scroll='out'] .char {
-			opacity: 0;
-			transform: translate(-300%, -50%) rotate(1080deg) scale(0);
-		}
-	}
-
-	&--blocks {
-		[data-scroll='out'] .char {
-			visibility: hidden;
-		}
-		[data-scroll='in'] {
-			overflow: hidden;
-			position: relative;
-		}
-		[data-scroll='in'] .char {
-			transition-delay: 0.5s;
-		}
-		[data-scroll='in']::after {
-			content: '';
-			height: 100%;
-			width: 100%;
-			position: absolute;
-			top: 0;
-			right: 0;
-			bottom: 0;
-			left: 0;
-			background: #fff;
-			animation: block 0.5s 0.25s both;
-		}
-		@keyframes block {
-			0% {
-				transform: translate(-110%, 0);
-			}
-			45%,
-			55% {
-				transform: translate(0, 0);
-			}
-			100% {
-				transform: translate(110%, 0);
-			}
-		}
-	}
-}
-/* End of effects block */
