새플러그인 추가

--- a/client/src/components/fullpage.css
+++ b/client/src/components/fullpage.css
@@ -7,9 +7,13 @@ body,
 	margin: 0;
 	padding: 0;
 	height: 100%;
+	overflow: scroll;
 	font-family: 'Lato', sans-serif;
 }
 
+body {
+	scroll-snap-type: y mandatory;
+}
 .page {
 	height: 100vh;
 	display: flex;
