--- a/client/src/components/fullpage.css
+++ b/client/src/components/fullpage.css
@@ -3,7 +3,7 @@ body {
 	margin: 0;
 	padding: 0;
 	height: 100%;
-	font-family: 'Pretendard', sans-serif;
+	font-family: 'Lato', sans-serif;
 	background: #111;
 	color: white;
 	overflow: hidden;
