--- a/client/src/components/fullpage.css
+++ b/client/src/components/fullpage.css
@@ -1,34 +1,57 @@
-html,
-body {
+body,
+html {
+	height: 100%;
+	font-size: 16px;
+	font-weight: normal;
+	font-family: 'Roboto', sans-serif;
+	color: white;
+	background-color: #f0f0ee;
 	margin: 0;
 	padding: 0;
-	height: 100%;
-	font-family: 'Lato', sans-serif;
-	background: #111;
-	color: #fff;
-	overflow: hidden;
 }
 
-[data-scroll-container] {
-	overflow: hidden;
+h1 {
+	font-size: 32px;
+	color: white;
+	position: relative;
+	display: block;
+	top: 40%;
+	text-align: center;
+	text-transform: uppercase;
 }
 
-.page-section {
+#pinContainer {
+	width: 100%;
 	height: 100vh;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	font-size: 4rem;
-	background: #111;
-	transition: background 0.4s;
+	overflow: hidden;
 	position: relative;
 }
 
-.page-section:nth-child(2n) {
-	background: #222;
+.panel {
+	height: 100%;
+	width: 100%;
+	position: absolute;
 }
 
-.char {
-	display: inline-block;
-	opacity: 0;
+#pinMaster {
+	position: relative;
+}
+
+.one {
+	background-color: #1bb1a5;
+}
+.two {
+	background-color: #94c356;
+}
+.three {
+	background-color: #e3aa59;
+}
+.four {
+	background-color: #777;
+}
+.five {
+	background-color: #a63ba0;
+}
+.six {
+	background-color: #cf5b21;
 }
