--- a/client/src/components/fullpage.css
+++ b/client/src/components/fullpage.css
@@ -1,57 +1,21 @@
-body,
-html {
-	height: 100%;
-	font-size: 16px;
-	font-weight: normal;
-	font-family: 'Roboto', sans-serif;
-	color: white;
-	background-color: #f0f0ee;
-	margin: 0;
-	padding: 0;
-}
-
-h1 {
-	font-size: 32px;
-	color: white;
-	position: relative;
-	display: block;
-	top: 40%;
+.section {
 	text-align: center;
-	text-transform: uppercase;
-}
-
-#pinContainer {
-	width: 100%;
+	font-size: 4rem;
+	color: white;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	height: 100vh;
-	overflow: hidden;
-	position: relative;
 }
-
-.panel {
-	height: 100%;
-	width: 100%;
-	position: absolute;
-}
-
-#pinMaster {
-	position: relative;
-}
-
 .one {
-	background-color: #1bb1a5;
+	background: #1bb1a5;
 }
 .two {
-	background-color: #94c356;
+	background: #94c356;
 }
 .three {
-	background-color: #e3aa59;
+	background: #e3aa59;
 }
 .four {
-	background-color: #777;
-}
-.five {
-	background-color: #a63ba0;
-}
-.six {
-	background-color: #cf5b21;
+	background: #777;
 }
