--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -138,14 +138,14 @@
 }
 .search-btn:before {
 	border-radius: 50%;
-	box-shadow: 0 0 0 0.2em #b0b0b0 inset;
+	box-shadow: 0 0 0 0.2em #333 inset;
 	top: 0.75em;
 	left: 0.75em;
 	width: 1.2em;
 	height: 1.2em;
 }
 .search-btn:after {
-	background: #b0b0b0;
+	background: #333;
 	border-radius: 0 0.25em 0.25em 0;
 	top: 51%;
 	left: 51%;
