--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -193,12 +193,12 @@
 		background: #171717;
 	}
 	.search-bar input {
-		box-shadow: 0 0 0 0.4em #f1f1f1 inset;
+		box-shadow: 0 0 0 0.4em #333 inset;
 	}
 	.search-bar input:focus,
 	.search-bar input:valid {
-		background: #3d3d3d;
-		box-shadow: 0 0 0 0.1em #3d3d3d inset;
+		background: #333;
+		box-shadow: 0 0 0 0.1em #333 inset;
 	}
 	.search-btn {
 		background: #333;
