--- a/client/src/assets/css/Header.css
+++ b/client/src/assets/css/Header.css
@@ -73,25 +73,32 @@
 	justify-content: flex-end;
 	align-items: center;
 	max-width: 200px;
+	transition: all 0.3s ease;
 }
 
 .search-bar input {
 	height: 2em;
-	padding: 0 0.75em;
-	border-radius: 2em 0 0 2em;
-	border: 1px solid #ccc;
-	font-size: 0.9rem;
-	flex: 1;
+	width: 0;
+	padding: 0;
+	border: none;
+	opacity: 0;
 	background: transparent;
-	transform: scale(0.5);
-	transition: all 0.3s ease;
+	color: #333;
+	font-size: 0.9rem;
+	border-radius: 2em 0 0 2em;
+	transform: scale(0);
 	transform-origin: right center;
-	width: 3em;
+	transition: all 0.3s ease;
+	overflow: hidden;
 }
 
-.search-bar input:focus {
-	background-color: #e6f1fc;
-	outline: none;
+.search-bar input:focus,
+.search-bar input:not(:placeholder-shown) {
+	width: 100%;
+	padding: 0 0.75em;
+	border: 1px solid #ccc;
+	opacity: 1;
+	transform: scale(1);
 }
 
 .search-btn {
