--- a/client/src/assets/css/Header.css
+++ b/client/src/assets/css/Header.css
@@ -20,6 +20,7 @@
 	margin: 0;
 	padding: 0;
 	justify-content: flex-end;
+	align-items: center;
 }
 
 .nav li a {
@@ -103,7 +104,7 @@
 
 .search-btn {
 	height: 2em;
-	width: 2.5em;
+	width: 2em;
 	background: #333;
 	color: white;
 	border: none;
