--- a/client/src/assets/css/Header.css
+++ b/client/src/assets/css/Header.css
@@ -19,7 +19,7 @@
 	gap: 20px;
 	margin: 0;
 	padding: 0;
-	justify-content: flex-end;
+	justify-content: flex-start;
 	align-items: center;
 }
 
@@ -91,6 +91,8 @@
 	transform-origin: right center;
 	transition: all 0.3s ease;
 	overflow: hidden;
+	position: absolute;
+	z-index: 9;
 }
 
 .search-bar input:focus,
@@ -114,6 +116,8 @@
 	justify-content: center;
 	font-size: 1em;
 	cursor: pointer;
+	position: absolute;
+	z-index: 999;
 }
 
 .search-btn i {
@@ -127,7 +131,7 @@
 
 .search-bar input:focus,
 .search-bar input:not(:placeholder-shown) {
-	width: 100%;
+	width: 200px;
 	transform: scale(1);
 }
 
