--- a/client/src/assets/css/Header.css
+++ b/client/src/assets/css/Header.css
@@ -108,8 +108,8 @@
 }
 
 .search-btn {
-	height: 2em;
-	width: 2em;
+	height: 34px;
+	width: 34px;
 	background: #333;
 	color: white;
 	border: none;
