--- a/client/src/assets/css/Header.css
+++ b/client/src/assets/css/Header.css
@@ -160,3 +160,29 @@
 		color: #fff;
 	}
 }
+
+input[type='search']::-webkit-search-decoration,
+input[type='search']::-webkit-search-cancel-button,
+input[type='search']::-webkit-search-results-button,
+input[type='search']::-webkit-search-results-decoration {
+	display: none;
+}
+
+.clear-btn {
+	position: absolute;
+	left: 8px;
+	background: transparent;
+	border: none;
+	color: #aaa;
+	font-size: 1.2em;
+	cursor: pointer;
+	z-index: 999;
+}
+
+.clear-btn:hover {
+	color: #000;
+}
+
+.search-bar input {
+	padding-left: 24px; /* 왼쪽 X 버튼 공간 확보 */
+}
