클리어 버튼 추가

--- a/client/src/assets/css/Header.css
+++ b/client/src/assets/css/Header.css
@@ -181,6 +181,7 @@ input[type='search']::-webkit-search-results-decoration {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	z-index: 99;
 }
 
 .clear-btn:hover {
