--- a/client/src/assets/css/Header.css
+++ b/client/src/assets/css/Header.css
@@ -143,9 +143,13 @@
 @media (prefers-color-scheme: dark) {
 }
 
+input[type='search']::-webkit-search-cancel-button {
+	display: none;
+}
+
 .clear-btn {
 	position: absolute;
-	left: 8px;
+	right: 32px;
 	top: 50%;
 	transform: translateY(-50%);
 	background: transparent;
