--- a/client/src/assets/css/Header.css
+++ b/client/src/assets/css/Header.css
@@ -104,15 +104,16 @@
 .search-bar input:not(:placeholder-shown) {
 	width: 100%;
 	padding: 0 0.75em;
-	border: none;
+	border: 1px solid #ccc;
 	opacity: 1;
 	transform: scale(1);
+	max-width: 170px;
 }
 
 .search-btn {
 	height: 34px;
 	width: 34px;
-	background: #333;
+	background: linear-gradient(135deg, #74ebd5, #9face6);
 	color: white;
 	border: none;
 	border-radius: 50%;
