패딩값 확인

--- a/client/src/assets/css/Header.css
+++ b/client/src/assets/css/Header.css
@@ -103,7 +103,7 @@
 .search-bar input:focus,
 .search-bar input:not(:placeholder-shown) {
 	width: 100%;
-	padding: 0 0.75em;
+	padding: 0 3rem 0 1rem;
 	border: 1px solid #ccc;
 	opacity: 1;
 	transform: scale(1);
