--- a/client/src/assets/css/fullpage.css
+++ b/client/src/assets/css/fullpage.css
@@ -24,6 +24,10 @@
 	display: inline-block;
 	animation-delay: calc(0.25s + var(--char-index) * 0.1s);
 	transition: all 0.25s calc(0.25s + var(--char-index) * 0.1s);
+	backface-visibility: hidden;
+	transform-style: preserve-3d;
+	will-change: transform, opacity;
+	font-family: 'Lato', sans-serif;
 }
 .text--enter [data-scroll='out'] .char {
 	opacity: 0;
