--- a/client/src/assets/css/fullpage.css
+++ b/client/src/assets/css/fullpage.css
@@ -24,6 +24,7 @@
 	display: inline-block;
 	animation-delay: calc(0.25s + var(--char-index) * 0.1s);
 	transition: all 0.25s calc(0.25s + var(--char-index) * 0.1s);
+	font-family: 'Lato';
 }
 .text--enter [data-scroll='out'] .char {
 	opacity: 0;
