--- a/client/src/assets/css/fullpage.css
+++ b/client/src/assets/css/fullpage.css
@@ -26,7 +26,7 @@
 	transition: all 0.25s calc(0.25s + var(--char-index) * 0.1s);
 	font-family: 'Lato';
 }
-.text--enter [data-scroll='out'] .char {
+.text--enter .char {
 	opacity: 0;
 	transform: translate(0, -150%);
 }
@@ -34,40 +34,40 @@
 	opacity: 1;
 	transform: translate(0, 0);
 }
-.text--random [data-scroll='out'] .char:nth-of-type(1) {
+.text--random .char:nth-of-type(1) {
 	transform: translateX(214%) translateY(-231%);
 }
-.text--random [data-scroll='out'] .char:nth-of-type(2) {
+.text--random .char:nth-of-type(2) {
 	transform: translateX(-125%) translateY(-81%);
 }
-.text--random [data-scroll='out'] .char:nth-of-type(3) {
+.text--random .char:nth-of-type(3) {
 	transform: translateX(202%) translateY(80%);
 }
-.text--random [data-scroll='out'] .char:nth-of-type(4) {
+.text--random .char:nth-of-type(4) {
 	transform: translateX(158%) translateY(88%);
 }
-.text--random [data-scroll='out'] .char:nth-of-type(5) {
+.text--random .char:nth-of-type(5) {
 	transform: translateX(242%) translateY(-117%);
 }
-.text--random [data-scroll='out'] .char:nth-of-type(6) {
+.text--random .char:nth-of-type(6) {
 	transform: translateX(-243%) translateY(-39%);
 }
-.text--swapsies [data-scroll='in'] .char:nth-of-type(odd),
-.text--swapsies [data-scroll='out'] .char:nth-of-type(odd) {
+.text--swapsies .char:nth-of-type(odd),
+.text--swapsies .char:nth-of-type(odd) {
 	transform: translateX(100%);
 }
-.text--swapsies [data-scroll='in'] .char:nth-of-type(even),
-.text--swapsies [data-scroll='out'] .char:nth-of-type(even) {
+.text--swapsies .char:nth-of-type(even),
+.text--swapsies .char:nth-of-type(even) {
 	transform: translateX(-100%);
 }
-.text--swapsies [data-scroll='in'] .char {
+.text--swapsies .char {
 	animation-duration: 0.5s;
 	animation-fill-mode: forwards;
 }
-.text--swapsies [data-scroll='in'] .char:nth-of-type(odd) {
+.text--swapsies .char:nth-of-type(odd) {
 	animation-name: swap-left;
 }
-.text--swapsies [data-scroll='in'] .char:nth-of-type(even) {
+.text--swapsies .char:nth-of-type(even) {
 	animation-name: swap-right;
 }
 @-moz-keyframes swap-right {
@@ -158,16 +158,16 @@
 		transform: translateX(0) translateY(0);
 	}
 }
-.text--fading [data-scroll='out'] .char {
+.text--fading .char {
 	opacity: 0;
 }
-.text--flipping [data-scroll='out'] .char {
+.text--flipping .char {
 	transform: rotateY(180deg);
 }
 .text--slide .char {
 	transition-delay: calc((var(--char-total) - var(--char-index)) * 0.1s);
 }
-.text--slide [data-scroll='out'] .char {
+.text--slide .char {
 	opacity: 0;
 	transform: translate(-300%, 0) skewX(20deg);
 }
@@ -179,10 +179,10 @@
 	color: #fff;
 	visibility: visible;
 }
-.text--karaoke [data-scroll='in'] .char:after {
+.text--karaoke .char:after {
 	clip-path: inset(0 0 0 0);
 }
-.text--karaoke [data-scroll='out'] .char:after {
+.text--karaoke .char:after {
 	clip-path: inset(0 100% 0 0);
 }
 .text--filling .char {
@@ -192,23 +192,23 @@
 	color: #fff;
 	visibility: visible;
 }
-.text--filling [data-scroll='in'] .char:after {
+.text--filling .char:after {
 	clip-path: inset(0 0 0 0);
 }
-.text--filling [data-scroll='out'] .char:after {
+.text--filling .char:after {
 	clip-path: inset(100% 0 0 0);
 }
-.text--blocks [data-scroll='out'] .char {
+.text--blocks .char {
 	visibility: hidden;
 }
-.text--blocks [data-scroll='in'] {
+.text--blocks {
 	overflow: hidden;
 	position: relative;
 }
-.text--blocks [data-scroll='in'] .char {
+.text--blocks .char {
 	transition-delay: 0.5s;
 }
-.text--blocks [data-scroll='in']:after {
+.text--blocks :after {
 	content: '';
 	height: 100%;
 	width: 100%;
@@ -268,17 +268,17 @@
 		transform: translate(110%, 0);
 	}
 }
-.text--scaling [data-scroll='out'] .char {
+.text--scaling .char {
 	transform: scale(0);
 }
-.text--turning [data-scroll='out'] .char {
+.text--turning .char {
 	transform: rotateY(90deg);
 }
-.text--folding [data-scroll='out'] .char {
+.text--folding .char {
 	transform: rotateX(90deg);
 	transform-origin: bottom;
 }
-.text--bulge [data-scroll='in'] .char {
+.text--bulge .char {
 	animation-name: bulge;
 	animation-duration: 0.25s;
 }
@@ -308,29 +308,29 @@
 .text--perspective .char {
 	transition: transform 0.25s calc(0.25s + var(--char-index) * 0.1s), opacity 0.05s calc(0.25s + var(--char-index) * 0.1s);
 }
-.text--perspective [data-scroll='out'] .char {
+.text--perspective .char {
 	opacity: 0;
 	transform: translate3d(-25px, -20px, -800px);
 }
 .text--zipping .char {
 	transition: transform 0.25s calc(0.25s + var(--char-index) * 0.1s), opacity 0.05s calc(0.25s + var(--char-index) * 0.1s);
 }
-.text--zipping [data-scroll='out'] .char {
+.text--zipping .char {
 	opacity: 0;
 }
-.text--zipping [data-scroll='out'] .char:nth-of-type(odd) {
+.text--zipping .char:nth-of-type(odd) {
 	transform: translate(0, -100%);
 }
-.text--zipping [data-scroll='out'] .char:nth-of-type(even) {
+.text--zipping .char:nth-of-type(even) {
 	transform: translate(0, 100%);
 }
-.text--spinning [data-scroll='out'] .char {
+.text--spinning .char {
 	transform: rotateY(-360deg);
 }
 .text--tumbling .char {
 	transition-delay: calc((var(--char-total) - var(--char-index)) * 0.1s);
 }
-.text--tumbling [data-scroll='out'] .char {
+.text--tumbling .char {
 	opacity: 0;
 	transform: translate(-300%, -50%) rotate(1080deg) scale(0);
 }
@@ -361,14 +361,14 @@
 .text--bubbling .char:nth-of-type(8) {
 	transition-delay: 0.5s;
 }
-.text--bubbling [data-scroll='out'] .char {
+.text--bubbling .char {
 	transform: scale(0.5);
 }
 .text--swinging .char {
 	transform-origin: calc((var(--char-total) - var(--char-index)) * 100%) -100%;
 	transition-delay: calc((var(--char-total) - var(--char-index)) * 0.1s);
 }
-.text--swinging [data-scroll='out'] .char {
+.text--swinging .char {
 	opacity: 0;
 	transform: rotate(90deg);
 }
@@ -376,7 +376,7 @@
 	transition: transform 1s, opacity 0.2s;
 	transition-delay: calc((var(--char-total) - var(--char-index)) * 0.1s);
 }
-.text--rolling [data-scroll='out'] .char {
+.text--rolling .char {
 	opacity: 0;
 	transform: translate(-500%, 0) scale(0) rotate(-1440deg);
 }
@@ -386,7 +386,7 @@
 	transform-origin: left bottom;
 	animation-delay: calc(var(--char-index) * 0.025s);
 }
-.text--blowing [data-scroll='in'] .char {
+.text--blowing .char {
 	animation-name: blowing;
 }
 @-moz-keyframes blowing {
@@ -446,10 +446,10 @@
 .text--meeting .char:nth-of-type(odd) {
 	transform-origin: bottom left;
 }
-.text--meeting [data-scroll='out'] .char {
+.text--meeting .char {
 	transform: rotate(180deg);
 }
-.text--conveyor [data-scroll='in'] .char {
+.text--conveyor .char {
 	transform-origin: left bottom;
 	animation: convey 1s both linear;
 	animation-delay: calc((var(--char-total) - var(--char-index)) * 0.15s);
